--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "alpinejs": "^3.13.0",
     "astro": "^3.0.7",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
