--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@alpinejs/collapse": "^3.13.0",
     "@astrojs/mdx": "^1.0.0",
+    "@astrojs/react": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "alpinejs": "^3.13.0",
     "astro": "^3.0.7",
+    "date-fns": "^2.30.0",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "tailwindcss": "^3.0.24"
