--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.30.0",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
+    "resend": "^1.0.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
