--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@alpinejs/collapse": "^3.13.0",
     "@astrojs/mdx": "^1.0.0",
+    "@astrojs/node": "^6.0.0",
     "@astrojs/react": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "@types/react": "^18.0.21",
@@ -22,7 +23,8 @@
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "resend": "^1.0.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9"
