--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "astro": "^3.0.7",
     "date-fns": "^2.30.0",
     "mdast-util-to-string": "^4.0.0",
+    "nodemailer": "^6.9.5",
     "reading-time": "^1.5.0",
     "resend": "^1.0.0",
     "tailwindcss": "^3.0.24",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/nodemailer": "^6.4.10"
   }
 }
