--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/vercel": "^5.0.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@vercel/analytics": "^1.0.2",
     "alpinejs": "^3.13.0",
     "astro": "^3.0.7",
     "date-fns": "^2.30.0",
